--- a/frontend/src/assets/custom.scss
+++ b/frontend/src/assets/custom.scss
@@ -1,9 +1,10 @@
 
 
-$dark:            rgb(30,30,30);
+$dark:            rgb(10,10,10);
 $purple-dark:  #2d242d;
 $purple-mid:    #8d558c;
 $purple-light:  #cba4cd;
+$secondary: black;
 
 $navbar-dark-hover-color: $purple-mid;
 $navbar-dark-active-color: $purple-mid;
@@ -17,6 +18,12 @@ $dropdown-item-padding-y: 0.8rem;
 $dropdown-divider-margin: 0;
 $dropdown-font-size: 1rem;
 $dropdown-border-width: 0;
+
+$badge-padding-y:  0.8em;
+$badge-padding-x:  1em;
+
+$btn-line-height:  0.3em;
+$btn-padding-x: 0.3em;
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
 @import '~bootstrap-vue/src/index.scss';
