improve text sizing

--- a/frontend/src/assets/custom.scss
+++ b/frontend/src/assets/custom.scss
@@ -4,9 +4,10 @@ $dark:            rgb(10,10,10);
 $purple-dark:  #2d242d;
 $purple-mid:    #8d558c;
 $purple-light:  #cba4cd;
+$pink: #dc3fb9;
 $secondary: black;
 
-$navbar-dark-hover-color: $purple-mid;
+$navbar-dark-hover-color: $pink;
 $navbar-dark-active-color: $purple-mid;
 
 
