lazy loading components, update content

--- a/frontend/src/assets/custom.scss
+++ b/frontend/src/assets/custom.scss
@@ -20,8 +20,8 @@ $dropdown-divider-margin: 0;
 $dropdown-font-size: 1rem;
 $dropdown-border-width: 0;
 
-$badge-padding-y:  0.8em;
-$badge-padding-x:  1em;
+$badge-pill-padding-y:  0.8em;
+$badge-pill-padding-x:  1em;
 
 $btn-line-height:  0.3em;
 $btn-padding-x: 0.3em;
